--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300&display=swap");
 
-body {
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
