--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,23 @@
   box-sizing: border-box;
   font-family: "Prompt", sans-serif;
 }
+
+.imgFix {
+  display: block;
+  width: 100%;
+  height: 220px;
+  overflow: hidden;
+  padding: 0.5rem;
+  text-align: center;
+  margin: auto;
+}
+
+.imgFix img {
+  width: auto;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cardText {
+  font-size: 14px;
+}
