--- a/css/banner.css
+++ b/css/banner.css
@@ -15,7 +15,7 @@
 .bannerMain1 {
   display: block;
   width: 100%;
-  height: 450px;
+  height: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
