--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,12 @@
   box-sizing: border-box;
   font-family: "Prompt", sans-serif;
 }
-
+.cardFixSize {
+  display: block;
+  width: 100%;
+  height: 450px;
+  background-color: rgb(67, 67, 67);
+}
 .imgFix {
   display: block;
   width: 100%;
@@ -15,6 +20,7 @@
   padding: 0.2rem;
   text-align: center;
   margin: auto;
+  background-color: #fff;
 }
 
 .imgFix img {
@@ -24,5 +30,39 @@
 }
 
 .cardText {
+  color: aliceblue;
   font-size: 14px;
+}
+
+.iconStatus {
+  display: block;
+  width: 20px;
+  height: auto;
+  position: absolute;
+  z-index: 11;
+  margin-top: -0.2rem;
+  top: 0;
+  left: 0;
+}
+
+.iconStatus img {
+  width: 100%;
+  height: auto;
+}
+
+.boxNumPage {
+  font-family: "Prompt", sans-serif;
+}
+
+.boxNumPage a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  border: 1pt solid #f8f7f7;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+  background-color: rgb(252, 240, 226);
+  color: black;
 }
