--- a/css/styles.css
+++ b/css/styles.css
@@ -66,3 +66,13 @@
   background-color: rgb(252, 240, 226);
   color: black;
 }
+
+.footerText {
+  text-align: center;
+  font-size: 14px;
+  font-family: "Prompt", sans-serif;
+  margin-top: 5rem;
+  padding: 3rem 0rem;
+  background-color: black;
+  color: #fff;
+}
