--- a/css/styles.css
+++ b/css/styles.css
@@ -74,5 +74,20 @@
   margin-top: 5rem;
   padding: 3rem 0rem;
   background-color: black;
-  color: #ffffff;
+  color: #fff;
+
+.imgesShow {
+  display: flex;
+  width: auto;
+  height: auto;
+  background-color: aqua;
+
+}
+.imgesShow img{
+  align-items: center;
+  margin: auto;
+  width: 250px;
+  height: auto;
+  object-fit: cover;
+  
 }
