--- a/css/banner.css
+++ b/css/banner.css
@@ -3,7 +3,7 @@
 .bannerMain {
   display: block;
   width: 100%;
-  height: 550px;
+  height: 400px;
   background-image: url("../images/bk1.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -34,7 +34,7 @@
   text-align: center;
   color: #000000;
   font-family: "Prompt", sans-serif;
-  margin-top: 20vh;
+  margin-top: 15vh;
   text-shadow: 0px 0px 5px #fdfdfd;
 }
 
@@ -61,6 +61,7 @@
   align-items: center;
   justify-content: space-between;
   justify-items: center;
+  top: 0;
 }
 .logo {
   display: block;
@@ -138,4 +139,18 @@
 .modal .modal-dialog .modal-content {
   background-color: #675d4b;
   color: #fdfdfd;
+}
+
+@media only screen and (max-width: 1204px) {
+  .bannerMain {
+    display: block;
+    width: 100%;
+    height: 350px;
+    background-image: url("../images/bk1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+  }
 }
